--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Testing 1.,2,3</title>
 </head>
 <body>
-<h1>Hello Coursera! </h1>
+<h1>Yo Big Guy!!</h1>
 </body>
 </html>
