--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 	<title>Testing 1.,2,3</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Yo Big Guy!!</h1>
