--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 	<title>Testing 1.,2,3</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="theme.css">
 </head>
 <body>
 <h1>Yo Big Guy!!</h1>
