--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>Testing 1.,2,3</title>
-<link rel="style" type="text/css" href="css/style.css">
+	<title>Module 2 Solution</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Yo Big Guy!!</h1>
