--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,12 +8,25 @@
 </head>
 <body>
 <h1>Today's Menu</h1>
-
-<div class="row">
-  <div class="col-lg-3 col-md-6"><p>Chicken<br><br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>
-  <div class="col-lg-3 col-md-6"><p>Beef<br><br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>
-   <div class="col-lg-3 col-md-12"><p>Sushi<br><br>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p></div>
- </div>
-
+<section class="container">
+	<div class="col-md-6 col-lg-4">
+		<div class="row">
+			<div class="title title--chicken">Chicken</div>
+			<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit nemo minus doloremque magni quia mollitia a quisquam placeat rem eius dolore quos incidunt, cupiditate, nulla quae deleniti quibusdam, eos.</p>
+		</div>
+	</div>
+	<div class="col-md-6 col-lg-4">
+		<div class="row">
+			<div class="title title--beef">Beef</div>
+			<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit nemo minus doloremque magni quia mollitia a quisquam placeat rem eius dolore quos incidunt, cupiditate, nulla quae deleniti quibusdam, eos.</p>
+		</div>
+	</div>
+	<div class="col-md-12 col-lg-4">
+		<div class="row">
+			<div class="title title--sushi">Sushi</div>
+			<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit nemo minus doloremque magni quia mollitia a quisquam placeat rem eius dolore quos incidunt, cupiditate, nulla quae deleniti quibusdam, eos.</p>
+		</div>
+	</div>
+</section>
 </body>
 </html>
