--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -28,5 +28,8 @@
 		</div>
 	</div>
 </section>
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.2.13.0.js'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
